feat: support message REST API
