# api/swagger.json
@@ -652,6 +652,71 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "group-participants"
+                ],
+                "summary": "Invite a specified participant in a group",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group identity",
+                        "name": "group_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User identity to invite",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/v1.GroupParticipant"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.Error"
+                        }
+                    }
+                }
             }
         },
         "/groups/{group_id}/participants/{user_id}": {
@@ -745,6 +810,15 @@
                         "name": "user_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Body to update",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.GroupParticipantUpdate"
+                        }
                     }
                 ],
                 "responses": {
@@ -795,6 +869,41 @@
                     "messages"
                 ],
                 "summary": "List messages for a specified chat",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Chat id for dialog or group",
+                        "name": "chat_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Chat type (dialog or group)",
+                        "name": "chat_type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Message id that excludes already-retrieved messages",
+                        "name": "id_after",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to list per page (default: 20, max: 100)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort order (asc or desc)",
+                        "name": "sort",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1152,6 +1261,19 @@
         }
     },
     "definitions": {
+        "entity.GroupParticipantStatus": {
+            "type": "string",
+            "enum": [
+                "joined",
+                "kicked",
+                "left"
+            ],
+            "x-enum-varnames": [
+                "JoinedStatus",
+                "KickedStatus",
+                "LeftStatus"
+            ]
+        },
         "http.Credentials": {
             "type": "object",
             "required": [
@@ -1222,15 +1344,7 @@
                     "type": "boolean"
                 },
                 "partner": {
-                    "type": "object",
-                    "properties": {
-                        "is_blocked": {
-                            "type": "boolean"
-                        },
-                        "user_id": {
-                            "type": "integer"
-                        }
-                    }
+                    "$ref": "#/definitions/v1.DialogPartner"
                 }
             }
         },
@@ -1260,6 +1374,17 @@
                     }
                 },
                 "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "v1.DialogPartner": {
+            "type": "object",
+            "properties": {
+                "is_blocked": {
+                    "type": "boolean"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
@@ -1331,13 +1456,10 @@
                     "type": "boolean"
                 },
                 "status": {
-                    "type": "string"
+                    "$ref": "#/definitions/entity.GroupParticipantStatus"
                 },
                 "user_id": {
                     "type": "integer"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
@@ -1352,6 +1474,19 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "v1.GroupParticipantUpdate": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "enum": [
+                        "joined",
+                        "left",
+                        "kicked"
+                    ]
                 }
             }
         },
@@ -1375,10 +1510,7 @@
             "type": "object",
             "properties": {
                 "content": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "content_type": {
                     "type": "string"
@@ -1404,12 +1536,20 @@
             "type": "object",
             "required": [
                 "chat_id",
+                "chat_type",
                 "content",
                 "content_type"
             ],
             "properties": {
                 "chat_id": {
                     "type": "integer"
+                },
+                "chat_type": {
+                    "type": "string",
+                    "enum": [
+                        "dialog",
+                        "group"
+                    ]
                 },
                 "content": {
                     "type": "array",
